apps/ntfy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ntfy
  labels:
    app.kubernetes.io/name: ntfy
    app.kubernetes.io/managed-by: argocd
